--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "@kanety/jquery-simple-tree-table": "^0.5.1"
     }
 }
